--- a/package.json
+++ b/package.json
@@ -2,5 +2,9 @@
   "name": "gympoint_brunobertolani",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "nodemon": "^2.0.1",
+    "sucrase": "^3.10.1"
+  }
 }
