--- a/package.json
+++ b/package.json
@@ -3,8 +3,16 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "dev": "nodemon src/server.js",
+    "dev:debug": "nodemon --inspect src/server.js"
+  },
   "devDependencies": {
     "nodemon": "^2.0.1",
     "sucrase": "^3.10.1"
+  },
+  "dependencies": {
+    "eslint": "^6.7.2",
+    "express": "^4.17.1"
   }
 }
