--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "sucrase": "^3.10.1"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^7.14.0",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^5.21.2",
+    "sequelize-cli": "^5.5.1"
   }
 }
