--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "sucrase": "^3.10.1"
   },
   "dependencies": {
+    "bcrypt": "^3.0.7",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
