--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.7",
+    "date-fns": "^2.8.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.14.0",
