--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "dev:debug": "nodemon --inspect src/server.js"
+    "dev:debug": "nodemon --inspect src/server.js",
+    "queue": "nodemon src/queue.js"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -18,9 +19,12 @@
     "sucrase": "^3.10.1"
   },
   "dependencies": {
+    "@sentry/node": "5.10.2",
     "bcrypt": "^3.0.7",
+    "bee-queue": "^1.2.2",
     "date-fns": "^2.8.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "express-handlebars": "^3.1.0",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.4.2",
@@ -29,6 +33,7 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
+    "youch": "^2.0.10",
     "yup": "^0.28.0"
   }
 }
